extract data from spotify api

--- a/main.ipynb
+++ b/main.ipynb
@@ -295,6 +295,15 @@
    "source": [
     "album_df[\"release_date\"] = pd.to_datetime(album_df[\"release_date\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_df[\"song_added\"] = pd.to_datetime(song_df[\"song_added\"])"
+   ]
   }
  ],
  "metadata": {
